# translation-validator

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_Template  Makefile  README.md  compile_commands.json
alive2_snapshot/: CMakeLists.txt  README.md
alive2_snapshot/llvm_util/: cmd_args_def.h
examples/: add_cpp.ll  simple_ret_cpp.ll
examples/ir/: add_rs.ll  simple_ret_rs.ll
examples/ir_fixed/add/: add_cpp_fixed.ll  note.md
examples/ir_fixed/binary_search/: binary_search_rs_fixed.ll  note.md
examples/ir_fixed/bitfield_ops/: bitfield_ops_cpp_fixed.ll  note.md
examples/ir_fixed/clone/: clone_rs_fixed.ll  note.md
examples/ir_fixed/nested_switch/: nested_switch_rs_fixed.ll  note.md
examples/source/: access_array.cpp  access_array.rs  initialize_array.rs  shift_left.cpp  shift_left.rs  simple_ret.cpp
examples/source/access_array/: access_array.cpp  access_array.rs
examples/source/add/: add.cpp  add.rs
examples/source/add_u32/: add_u32.cpp  add_u32.rs
examples/source/atomic/: atomic.cpp  atomic.rs
examples/source/binary_search/: binary_search.cpp  binary_search.rs
examples/source/bitfield_ops/: bitfield_ops.cpp  bitfield_ops.rs
examples/source/callback/: callback.cpp  callback.rs
examples/source/clone/: clone.cpp  clone.rs
examples/source/const_ptr/: const_ptr.cpp
examples/source/deref/: deref.cpp  deref.rs
examples/source/different_ret/: different_ret.cpp  different_ret.rs
examples/source/div_by_zero/: div_by_zero.cpp  div_by_zero.rs
examples/source/factorial/: factorial.cpp  factorial.rs
examples/source/initialize_array/: initialize_array.cpp
examples/source/nested_switch/: nested_switch.cpp  nested_switch.rs
examples/source/null_deref/: null_deref.cpp  null_deref.rs
examples/source/simple_enum/: simple_enum.cpp  simple_enum.rs
examples/source/simple_generic/: simple_generic.cpp  simple_generic.rs
examples/source/simple_reference/: simple_reference.cpp  simple_reference.rs
examples/source/simple_ret/: simple_ret.cpp  simple_ret.rs
examples/source/simple_struct/: simple_struct.cpp  simple_struct.rs
examples/source/str_len/: str_len.cpp  str_len.rs
examples/source/switch_case/: switch_case.cpp  switch_case.rs
examples/source/union/: union.cpp  union.rs
examples/source/unsafe_example/: unsafe_example.cpp  unsafe_example.rs
examples/source/use_uninit/: use_uninit.cpp  use_uninit.rs
relay_server/: .gitignore  CMakeLists.txt  RelayServer.cpp  relay_server.cpp
scripts/: build.sh  build_alive2_snapshot.sh  build_relay.sh  format.sh  run.sh  src2ir.py
slides/: .gitignore  README.md  index.html  package-lock.json  slides.md
src/: Comparer.h  Preprocessor.h  Printer.h  ValidatorServer.cpp  ValidatorServer.h  main.cpp
validator-frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
validator-frontend/src/app/: globals.css  layout.tsx  page.tsx
validator-frontend/src/app/api/generate-ir/: route.ts
validator-frontend/src/components/: CodeEditor.tsx  CodeEditorForm.tsx  CollapsibleSection.tsx  CopyButton.tsx  ErrorBoundary.tsx  ExampleSelector.tsx  FileUploadForm.tsx  LLVMIRModal.tsx  Toast.tsx  Tooltip.tsx  ValidationForm.tsx
validator-frontend/src/data/: examples.ts
validator-frontend/src/types/: validator.ts
(+1 files in other folders)
